# ast-grep-mcp

./: .claudeignore  .coverage  .gitignore  ANALYTICSBOT-CODE-ANALYSIS-REPORT.md  ANALYTICSBOT-REFACTORING-IMPLEMENTATION-GUIDE.md  ANALYTICSBOT-REFACTORING-PLAN.md  ANALYTICSBOT-REFACTORING-SUMMARY.md  AST-GREP-PROMPTING-SUGGESTIONS.md  BATCH-COVERAGE-OPTIMIZATION-SUMMARY.md  BENCHMARKING.md  BUILD_ENTITY_GRAPH_FIX.md  CHANGELOG.md  CLAUDE.md  CODEBASE-ANALYSIS-REPORT.md  CODEBASE_ANALYSIS_REPORT.md  COMPLEXITY_REFACTORING_REPORT.md  DOPPLER-MIGRATION.md  GEMINI.md  GENERATOR_REFACTORING_SUMMARY.md  MAGIC_NUMBERS_REFACTORING_REPORT.md  OPTIMIZATION-1.3-PARALLEL-UTILITY.md  OPTIMIZATION-3.3-PROGRESS-CALLBACKS.md  OPTIMIZATION-ANALYSIS-analysis-orchestrator.md  OPTIMIZATION-EARLY-EXIT-max-candidates.md  OPTIMIZATION-PHASE1-QUICK-WINS.md  OPTIMIZATION-VERIFICATION-2025-11-28.md  PATTERNS.md  PHASE-11B-SUMMARY.md  PHASE-2B-IMPLEMENTATION.md  PHASE-2B-QUICK-REF.md  PHASE-7-STATUS.md  PHASE1_COMPLETE.md  PHASE1_NEXT_SESSION_GUIDE.md  PHASE1_REFACTORING_SUMMARY.md  PHASE1_SESSION2_SUMMARY.md  PHASE2_ACTION_PLAN.md  PHASE2_FINAL_PUSH_SUMMARY.md  PHASE2_REFACTORING_SESSION1.md  PHASE4_CONFIG_OBJECT_PATTERN.md  PLAN.md  (+35 more)
.claude/: ralph-loop.local.md  telemetry-observability.md
.claude/cache/: mcp-tools.md
.claude/commands/: list-tools.md
.claude/hooks/: update-tools-cache.sh
.claude/skills/: base-controller-pattern.md  react-context-performance.md
.condense/dictionaries/: dict_python.zdict
.github/workflows/: ci.yml
analysis_reports/: ANALYSIS_SUMMARY_20251209_110212.md
analysis_reports/coverage/: coverage_report_20251209_110212.json  coverage_report_20251209_110212.txt
analysis_reports/dashboards/: dashboard_20251209_110212.html
analysis_reports/dependencies/: dependency_report_20251209_110212.json  dependency_report_20251209_110212.txt
analysis_reports/quality/: quality_report_20251209_110212.json  quality_report_20251209_110212.txt
analysis_reports/rss/: code_updates_20251209_110212.xml
analysis_reports/schemas/: schemas_enhanced.json
benchmark_comparisons/: benchmark_results.json
dev/: CONFIGURATION.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  SCHEMA-GRAPH-BUILDER-QUICK-START.md  SCHEMA-GRAPH-BUILDER-README.md  SCHEMA-TOOLS-README.md  repomix-output.xml
dev/active/: CONTEXT-RESET-SUMMARY.md  NEW-FEATURES-OVERVIEW.md  README.md  repomix-output.xml
dev/archive/: COMPLEXITY_METRICS_COMPARISON.md  COMPLEXITY_REGRESSION_TESTS_SUMMARY.md  IMPORT-FIX-SUMMARY.md  NEW-FEATURES-OVERVIEW.md  OPTIMIZATION-1.1-BATCH-COVERAGE-VERIFICATION.md  PHASE-12-COMPLETION.md  PHASE-13-COMPLETION.md  PHASE1_NEXT_SESSION_GUIDE.md  REFACTORING_EXTRACT_CLASSES.md  REFACTORING_PLAN_analyze_complexity_tool.md  REFACTORING_SCHEMA_INITIALIZE.md  REFACTORING_VERIFICATION.md  REFACTORING_VERIFICATION_EXTRACT_FUNCTION_NAMES.md  REFACTORING_VERIFICATION_classify_variable_types.md  REMAINING-TASKS-SUMMARY.md  SESSION_2025-11-27_CODEBASE_ANALYSIS.md  SESSION_2025-11-27_PRIORITY_1_REFACTORING.md  SESSION_2025-11-27_PRIORITY_3_REFACTORING.md  TEST-CONSOLIDATION-PLAN.md  detect-security-issues-refactor-2025-11-28.md  enhanced-deduplication-system-summary.md  smells-refactor-results-2025-11-28.md  (+1 more)
docs/: 15-DAY-REFACTOR-COMPLETION-REPORT.md  2026-03-08-complexity-analysis.md  ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE-SUMMARY.md  BACKFILLING.md  BACKLOG.md  BENCHMARKING.md  CHANGELOG.md  CODE-CONDENSE-PHASE-2.md  CODE-CONDENSE-PREP.md  COMPLEXITY-REPORT.md  CONFIGURATION.md  CONFIG_PATTERNS.md  DEDUPLICATION-GUIDE.md  DRY-review.md  ENHANCE_ENTITY_GRAPH_PLAN.md  KNOWN_ISSUES.md  MIGRATION-FROM-MONOLITH.md  MIGRATION-PLAN.md  MODULAR-ARCHITECTURE.md  MODULE-DEPENDENCIES.md  MODULE-GUIDE.md  OBSERVABILITY-TOOLKIT-QUALITY-REPORT.md  PATTERNS.md  PHASE-2-COMPLETION.md  README.md  SCHEMA-HTML-MARKDOWN.md  SENTRY-INTEGRATION.md  SESSION_HISTORY.md  TOOL-REGISTRATION-STATUS.md  duplicate-detector-misses.md  magic_number_semantic_analysis_2026-03-04.tsv  quality-context-2026-03-14.md
docs/archive/: README.md  (+23 more)
mcp-docs/: README.md  repomix-output.xml
scripts/: README-SCRIPTS.md  README.md  README_ENHANCED.md  all_tools_results.json  all_tools_results_jobs.json  analysis_output_helpers.py  analyze-duplicates.py  analyze_analyticsbot.py  analyze_violations.py  backfill-skill-spans.py  benchmark_batch_coverage.py  benchmark_orphan_detector.py  benchmark_parallel_enrichment.py  categorize-magic-numbers.ts  detect_orphans_detail.py  find_duplication.py  find_duplication.sh  fix_import_orphans.py  fix_imports.py  fix_migration_errors.py  fix_test_imports.py  generate-repomix-git-ranked.sh  import_helpers.py  list_complexity_violations.py  migrate_print_to_logger.py  migrate_prints_smart.py  migrate_test_imports.py  migration_common.py  quality_docs_results.json  run_all_analysis.py  run_all_tools.py  run_benchmarks.py  run_quality_docs.py  scan_complexity_offenders.py  schema-graph-builder.py  schema-tools.py
tests/: BEFORE_AFTER_EXAMPLES.md  CONFTEST_ENHANCEMENTS.md  DEVELOPER_ONBOARDING.md  FIXTURE_COOKBOOK.md  FIXTURE_GOVERNANCE.md  FIXTURE_MIGRATION_GUIDE.md  FIXTURE_QUICK_REFERENCE.md  PHASE-1-FINDINGS.md  PHASE-2-COMPLETION.md  README.md  README_ENHANCED.md  REFACTORING_ANALYSIS.md  conftest.py  fixture_metrics_history.json  repomix-output.xml  test_apply_dedup_baseline.json  test_cache.py  test_dedup_rollback_baseline.json  test_duplication.py  test_integration.py  test_rewrite_baseline.json  test_schema_baseline.json  test_unit.py
todos/: phase-1-pattern-analysis.md  phase-2-code-generation.md  phase-3-automated-application.md  phase-4-analysis-ranking.md  phase-5-reporting-ui.md  phase-6-testing-docs.md
(+483 files in other folders)
